# dataharbor

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  RELEASE_NOTES.md  ReleaseNotes.md  package-lock.json  package.json
.devcontainer/: Dockerfile  README.md  devcontainer.json
.github/workflows/: auto-version.yml  backend.yml  build-rpm.yml  frontend.yml  (+5 more)
app/: .gitignore  Containerfile  README.md  RELEASE_NOTES.md  go.mod  go.sum  main.go  main_test.go  routes.go
docker/: .dockerignore  .env-gsi-dev  .env.example  .env.production.example  README.md  docker-compose.deploy.yml  docker-compose.prod.yml  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  AUTHENTICATION.md  BACKEND.md  BACKEND_CONFIGURATION.md  CONFIGURATION.md  DEPLOYMENT.md  DEPLOYMENT_GSI.md  DEVELOPMENT.md  DOWNLOADS.md  FRONTEND.md  FRONTEND_CONFIGURATION.md  GSI_punch2.md  README.md  SETUP.md  TESTING.md  TROUBLESHOOTING.md  VERSIONING.md  XROOTD_ZTN_SETUP.md  xrootd.md
packaging/: README.md  build_rpm.py  build_rpm.sh  build_rpm_base.sh  data-lake-ui-backend.spec  data-lake-ui-frontend.spec  dataharbor-backend.spec  dataharbor-frontend.spec  generate_changelog.py  generate_changelog.sh
playground/xrd_api_test/: CMakeLists.txt  main.cpp
scripts/: build-backend.sh  build-docker.sh
tools/: changelog.py  create_test_files.py  generate-changelog.js  generate_release_notes.py  sync-versions.js  version.js
web/: Containerfile  README.md  RELEASE_NOTES.md  cert-config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js  vite.sandbox.config.js
(+159 files in other folders)
